# task-manager-java

./: .gitignore  CMakeLists.txt  README.md  pom.xml
.plan/056532ef-4367-4513-a22a-1c55af2e13c7/: DECISIONS.md  implementation_approach.md  validation.md
.plan/0e924d11-cbdf-437d-9940-c91e63d0331b/: DECISIONS.md  implementation_approach.md  validation.md
.plan/166421f6-7971-4856-8d9d-76b4084c4f23/: DECISIONS.md  implementation_approach.md  validation.md
.plan/1d337703-5d76-4f5c-9d06-4265a6895695/: DECISIONS.md  implementation_approach.md  validation.md
.plan/33df90fd-eb94-429a-8250-bf1328961513/: DECISIONS.md  implementation_approach.md  validation.md
.plan/59b60f9a-21a8-4f6e-bdb0-16377cd548e6/: DECISIONS.md  implementation_approach.md  validation.md
.plan/68c788a0-7b99-4858-ac1f-ecdc5e262452/: DECISIONS.md  implementation_approach.md  validation.md
.plan/771cd6eb-e4e0-4c1f-b036-8b46d03ad463/: DECISIONS.md  implementation_approach.md  validation.md
.plan/7fbd975e-048f-4fad-a0e7-02749d6a0909/: DECISIONS.md  implementation_approach.md  validation.md
.plan/8ce012f1-6d35-4a21-b1b9-5feaee05ffbb/: DECISIONS.md  implementation_approach.md  validation.md
.plan/f325cbda-692b-4ed8-8560-7fa5a978b310/: DECISIONS.md  implementation_approach.md  validation.md
src/: date_utils.h  main.cpp  placeholder.cpp  priority.h  task.cpp  task.h  task_service.cpp  task_service.h  task_status.h  task_store.cpp  task_store.h  task_summary.h
src/main/java/com/demo/: InMemoryTaskRepository.java  Main.java  Priority.java  Task.java  TaskManager.java  TaskManagerUI.java  TaskRepository.java  TaskService.java  TaskStatus.java  TaskSummary.java
src/test/java/com/demo/: CliE2ETest.java  CliFilterE2ETest.java  CliOverdueE2ETest.java  FilterScreenshotTest.java  ScreenshotTest.java  TaskManagerTest.java  TaskServiceTest.java  TaskTest.java  VisualValidationTest.java
tests/: cli_e2e_test.cpp  placeholder_test.cpp  task_service_test.cpp  task_store_test.cpp
